--- a/trunk/mypattern-base/mypattern-base.cbp
+++ b/trunk/mypattern-base/mypattern-base.cbp
@@ -115,6 +115,7 @@
 		<Unit filename="include/evaluation/formula/term.h" />
 		<Unit filename="include/evaluation/landmarkevaluationtreenode.h" />
 		<Unit filename="include/exceptions/argumentnullexception.h" />
+		<Unit filename="include/exceptions/circulardependencyevaluationexception.h" />
 		<Unit filename="include/exceptions/evaluationexception.h" />
 		<Unit filename="include/exceptions/exception.h" />
 		<Unit filename="include/exceptions/formulaevaluationexception.h" />
@@ -155,6 +156,7 @@
 		<Unit filename="src/evaluation/formula/term.cpp" />
 		<Unit filename="src/evaluation/landmarkevaluationtreenode.cpp" />
 		<Unit filename="src/exceptions/argumentnullexception.cpp" />
+		<Unit filename="src/exceptions/circulardependencyevaluationexception.cpp" />
 		<Unit filename="src/exceptions/evaluationexception.cpp" />
 		<Unit filename="src/exceptions/exception.cpp" />
 		<Unit filename="src/exceptions/formulaevaluationexception.cpp" />
