Pattern evaluation * Added Tests for Point, Bezier and BezierDefinition * Added new test source files to Makefile of mypattern-base-test * Changed floats to doubles in Point, BezierDefinition (CurveDefinition), BezierComplex and Bezier * Bugfixes in Bezier and BezierComplex * Interface changes in CurveDefinition * Interface changes in CurveEvaluationTreeNode * Other minor changes

--- a/mypattern-base-test/Makefile
+++ b/mypattern-base-test/Makefile
@@ -1,6 +1,6 @@
 # all: %.o
 
-CPP=./src/EvaluationTreeTest.cpp ./src/differencetermtests.cpp ./src/producttermtest.cpp ./src/QuotientTermTest.cpp ./src/main.cpp ./src/FormulaTest.cpp ./src/sumtermtest.cpp ./src/ScalarTermTest.cpp ./src/ConstantTermTest.cpp ./src/landmarktest.cpp
+CPP=./src/EvaluationTreeTest.cpp ./src/landmarktest.cpp ./src/beziertest.cpp ./src/QuotientTermTest.cpp ./src/main.cpp ./src/differencetermtests.cpp ./src/producttermtest.cpp ./src/ConstantTermTest.cpp ./src/testpoint.cpp ./src/sumtermtest.cpp ./src/FormulaTest.cpp ./src/ScalarTermTest.cpp ./src/curvetest.cpp
 
 INCLUDES=-I../mypattern-base/include -I../UnitTest++/src -I./include -I/usr/include/glibmm-2.4/ -I/usr/lib/x86_64-linux-gnu/glibmm-2.4/include -I/usr/lib/i386-linux-gnu/glibmm-2.4/include/ -I/usr/include/glib-2.0/ -I/usr/lib/x86_64-linux-gnu/glib-2.0/include/ -I/usr/lib/i386-linux-gnu/glib-2.0/include/ -I/usr/include/cairomm-1.0/ -I/usr/include/sigc++-2.0/ -I/usr/lib/i386-linux-gnu/sigc++-2.0/include/ -I/usr/lib/x86_64-linux-gnu/sigc++-2.0/include/ -I/usr/include/cairo/ -I/usr/include/freetype2/ -I/usr/lib/i386-linux-gnu/cairomm-1.0/include/ -I/usr/lib/x86_64-linux-gnu/cairomm-1.0/include/
 
