Changed test projects to create JUnit style output

--- a/mypattern-base-test/mypattern-base-test.cbp
+++ b/mypattern-base-test/mypattern-base-test.cbp
@@ -23,7 +23,7 @@
 					<Add directory="$(GTK_BASEPATH)/lib" />
 				</Linker>
 				<ExtraCommands>
-					<Add after="./mypattern-base-test" />
+					<Add after="./mypattern-base-test junit" />
 					<Mode after="always" />
 				</ExtraCommands>
 			</Target>
