--- a/trunk/mypattern-base-test/mypattern-base-test.cbp
+++ b/trunk/mypattern-base-test/mypattern-base-test.cbp
@@ -140,6 +140,7 @@
 		<Unit filename="Makefile" />
 		<Unit filename="src/INT_EvaluationTree.cpp" />
 		<Unit filename="src/INT_Formulae.cpp" />
+		<Unit filename="src/INT_PartDefinition.cpp" />
 		<Unit filename="src/UNT_Bezier.cpp" />
 		<Unit filename="src/UNT_ConstantTerm.cpp" />
 		<Unit filename="src/UNT_CurveDefinition_BezierDefinition.cpp" />
