* Adapted Makefiles to support the automated generation of code coverage information * Commented out some unused code in xmlfilereader.cpp

--- a/mypattern-base-test/Makefile
+++ b/mypattern-base-test/Makefile
@@ -21,4 +21,5 @@ run_test: mypattern-base-test
 	$(CC) $(CC_OPTIONS) $(INCLUDES) -o $@  -g -c $<
 
 clean:
-	rm ./mypattern-base-test
+	-rm ./mypattern-base-test
+	-rm $(OBJ)
