Reverted changes in makefile

--- a/mypattern-base-test/Makefile
+++ b/mypattern-base-test/Makefile
@@ -1,7 +1,7 @@
 # all: %.o
 
-# OBJ=./src/UNT_SumTerm.o ./src/UNT_QuotientTerm.o ./src/UNT_DifferenceTerm.o ./src/INT_Formulae.o ./src/main.o ./src/UNT_Landmark.o ./src/UNT_Bezier.o ./src/UNT_ScalarTerm.o ./src/UNT_ConstantTerm.o ./src/UNT_ProductTerm.o ./src/UNT_Point.o ./src/UNT_CurveDefinition_BezierDefinition.o ./src/INT_EvaluationTree.o ./src/INT_PartDefinition.o
-OBJ=./src/%.o
+OBJ=./src/UNT_SumTerm.o ./src/UNT_QuotientTerm.o ./src/UNT_DifferenceTerm.o ./src/INT_Formulae.o ./src/main.o ./src/UNT_Landmark.o ./src/UNT_Bezier.o ./src/UNT_ScalarTerm.o ./src/UNT_ConstantTerm.o ./src/UNT_ProductTerm.o ./src/UNT_Point.o ./src/UNT_CurveDefinition_BezierDefinition.o ./src/INT_EvaluationTree.o ./src/INT_PartDefinition.o
+# OBJ=./src/%.o
 
 INCLUDES=-I../mypattern-base/include -I../UnitTest++/src -I./include -I/usr/include/glibmm-2.4/ -I/usr/lib/x86_64-linux-gnu/glibmm-2.4/include -I/usr/lib/i386-linux-gnu/glibmm-2.4/include/ -I/usr/include/glib-2.0/ -I/usr/lib/x86_64-linux-gnu/glib-2.0/include/ -I/usr/lib/i386-linux-gnu/glib-2.0/include/ -I/usr/include/cairomm-1.0/ -I/usr/include/sigc++-2.0/ -I/usr/lib/i386-linux-gnu/sigc++-2.0/include/ -I/usr/lib/x86_64-linux-gnu/sigc++-2.0/include/ -I/usr/include/cairo/ -I/usr/include/freetype2/ -I/usr/lib/i386-linux-gnu/cairomm-1.0/include/ -I/usr/lib/x86_64-linux-gnu/cairomm-1.0/include/
 
