--- a/mypattern-base/mypattern-base.cbp
+++ b/mypattern-base/mypattern-base.cbp
@@ -7,7 +7,7 @@
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="d_mypattern-base" prefix_auto="1" extension_auto="1" />
+				<Option output="dmypattern-base" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="" />
 				<Option object_output="obj/Debug/" />
 				<Option type="2" />
@@ -34,7 +34,7 @@
 				</Linker>
 			</Target>
 			<Target title="Debug Linux">
-				<Option output="d_mypattern-base" prefix_auto="1" extension_auto="1" />
+				<Option output="dmypattern-base" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="" />
 				<Option object_output="obj/Debug/" />
 				<Option type="2" />
@@ -95,6 +95,8 @@
 			<Add directory="$(GTK_BASEPATH)/include/freetype2" />
 			<Add directory="$(GTK_BASEPATH)/lib/cairomm-1.0/include" />
 			<Add directory="$(GTK_BASEPATH)/lib/sigc++-2.0/include" />
+			<Add directory="../mypattern-exceptions/include" />
+			<Add directory="../mypattern-data/include" />
 		</Compiler>
 		<Unit filename="Makefile" />
 		<Unit filename="include/bezier.h" />
